syntax = "proto2";
import "Engine/Scene/Model/Fade.proto";

package usg.Events;

message SetFadeMultiplier
{
	required uint32 uId = 1;
	required float fTargetFade = 2;
	required float fFadeTime = 3;
}

message FaderEvent
{
	required FaderState state = 1;
};
